# mcp-rag

./: main.py  pyproject.toml
mcp_rag/: __init__.py  tool.py
